crates/action-graph/tests/snapshots/action_graph_test__action_graph__setup_toolchain__doesnt_add_if_not_listed.snap
---
source: crates/action-graph/tests/action_graph_test.rs
expression: graph.to_dot()
---
digraph {
    0 [ label="SyncWorkspace" ]
    1 [ label="SetupToolchain(system)" ]
    1 -> 0 [ ]
}
